# channel-chat

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.husky/: pre-commit
channel_chat/: __init__.py  chunker.py  cli.py  database.py  downloader.py  embedder.py  mcp_server.py  search.py  transcriber.py
cloudflare/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
cloudflare/migrations/: 0001_schema.sql
cloudflare/scripts/: build-ui.cjs  dedupe-transcripts.ts
cloudflare/src/: api.ts  db.ts  index.ts  landing-html.ts  mcp-handler.ts  types.ts  ui-html.ts  vectorize.ts
cloudflare/src/test/: db.test.ts  env.d.ts  integration.test.ts  mcp.test.ts  tsconfig.json  vectorize-test-helpers.ts  vectorize.test.ts
src/: chunker.ts  cli.ts  cloudflare-client.ts  database.ts  downloader.ts  embedder.ts  mcp-server.ts  package-lock.json  package.json  search.ts  transcriber.ts
tests/: test_1_transcripts.py  test_2_chunk_embed.py  test_3_database_search.py
ui/: dev.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: app.ts  dev.ts  mock-data.ts  styles.css
