[project]
name = "channel-chat"
version = "0.1.0"
description = "CLI tool to download, transcribe, embed, and semantically search YouTube channel content"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.0.0",
    "elevenlabs>=1.0.0",
    "google-genai>=1.0.0",
    "sqlite-vec>=0.1.0",
    "click>=8.0.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
channel-chat = "channel_chat.cli:main"
channel-chat-mcp = "channel_chat.mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["channel_chat"]
